k8s/apps/leachnet/ln-owntracks/owntracks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owntracks-recorder
  labels:
    app: owntracks-recorder
spec:
  selector:
    matchLabels:
      app: owntracks-recorder
  template:
    metadata:
      labels:
        app: owntracks-recorder
    spec:
      containers:
      - image: owntracks/recorder:latest
        name: recorder
        resources:
          requests:
            memory: "100Mi"
            cpu: "150m"
          limits:
            memory: "200Mi"
            cpu: "300m"
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 5
        ports:
        - containerPort: 8083
          name: http
        volumeMounts:
        - name: data
          mountPath: /store
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: owntracks
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owntracks-frontend
  labels:
    app: owntracks-frontend
spec:
  selector:
    matchLabels:
      app: owntracks-frontend
  template:
    metadata:
      labels:
        app: owntracks-frontend
    spec:
      containers:
      - image: owntracks/frontend:latest
        name: frontend
        resources:
          requests:
            memory: "25Mi"
            cpu: "50m"
          limits:
            memory: "30Mi"
            cpu: "75m"
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 5
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: config
          mountPath: usr/share/nginx/html/config/config.js
          subPath: config.js
      volumes:
        - name: config
          configMap:
            name: owntracks-frontend-config
