k8s/apps/leachnet/ln-owntracks/owntracks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: owntracks-recorder
spec:
  ports:
  - name: http
    port: 8083
    targetPort: 8083
  selector:
    app: owntracks-recorder
---
apiVersion: v1
kind: Service
metadata:
  name: owntracks-frontend
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: owntracks-frontend
